refactoring structure