@@ -25,6 +25,7 @@
 		<!--<spring.version>4.0.2.RELEASE</spring.version>-->
 		<!--<mysql.connector.version>5.1.31</mysql.connector.version>-->
 		<java.version>17</java.version>
+		<compiler.plugin.version>3.8.1</compiler.plugin.version>
 		<spring.boot.version>3.4.0</spring.boot.version>
 		<kotlin.version>1.9.25</kotlin.version>
 		<kotlin.compiler.jvmTarget>${java.version}</kotlin.compiler.jvmTarget>
@@ -43,9 +44,6 @@
 		<lombok.version>1.18.30</lombok.version>
 
 		<image>eugenfff/${project.artifactId}:${project.version}</image>
-<!--		eugen example for sub modules-->
-<!--			<artifactId>notification</artifactId>-->
-<!--			<version>0.0.1-SNAPSHOT</version>-->
 	
 	</properties>
 	
@@ -213,10 +211,10 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
-					<version>3.8.1</version>
+					<version>${compiler.plugin.version}</version>
 					<configuration>
-						<source>17</source>
-						<target>17</target>
+						<source>${java.version}</source>
+						<target>${java.version}</target>
 						<annotationProcessorPaths>
 							<annotationProcessorPath>
 								<groupId>org.mapstruct</groupId>
@@ -273,26 +271,13 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
-					<version>3.8.0</version>
+					<version>${compiler.plugin.version}</version>
 					<configuration>
-						<source>17</source>
-						<target>17</target>
+						<source>${java.version}</source>
+						<target>${java.version}</target>
 					</configuration>
 				</plugin>
-
-<!--			<plugin>-->
-<!--				<groupId>org.apache.tomcat.maven</groupId>-->
-<!--				<artifactId>tomcat7-maven-plugin</artifactId>-->
-<!--				<version>2.2</version>-->
-<!--				<configuration>-->
-<!--					<path>/${project.build.finalName}</path>-->
-<!--					<update>true</update>-->
-<!--					&lt;!&ndash;<url>http://h2457130.stratoserver.net:8080/manager/text</url>&ndash;&gt;-->
-<!--					<url>http://localhost:8080/manager/text</url>-->
-<!--					<username>tomcat</username>-->
-<!--					<password>frankfurt_2015</password>-->
-<!--				</configuration>-->
-<!--			</plugin>-->
+			
 
 			<!--make war with maven-->
 			<plugin>
@@ -304,48 +289,6 @@
 				</configuration>
 			</plugin>
 
-			<!-- Run the application using "mvn jetty:run" -->
-			<!-- Goals: jetty:run -->
-			<!-- Profile: jetty9 -->
-			<!-- VM arguments: -XX:MaxPermSize=512M -Xmx1g" -->
-			<!--<plugin>-->
-				<!--<groupId>org.eclipse.jetty</groupId>-->
-				<!--<artifactId>jetty-maven-plugin</artifactId>-->
-				<!--&lt;!&ndash; to update plugin to the higher version the atmosphere framework -->
-					<!--should be updated first: https://github.com/Atmosphere/atmosphere/issues/1433 &ndash;&gt;-->
-				<!--<version>9.2.5.v20141112</version>-->
-				<!--<configuration>-->
-					<!--<scanIntervalSeconds>0</scanIntervalSeconds>-->
-					<!--&lt;!&ndash;<webAppConfig>&ndash;&gt;-->
-					<!--&lt;!&ndash;<contextPath>/ROOT</contextPath>&ndash;&gt;-->
-					<!--&lt;!&ndash;</webAppConfig>&ndash;&gt;-->
-					<!--&lt;!&ndash;<webApp>&ndash;&gt;-->
-					<!--&lt;!&ndash;<contextPath>/</contextPath>&ndash;&gt;-->
-					<!--&lt;!&ndash;<war>${basedir}/target/ROOT.war</war>&ndash;&gt;-->
-					<!--&lt;!&ndash;</webApp>&ndash;&gt;-->
-					<!--&lt;!&ndash;<webAppSourceDirectory>${basedir}/target/ROOT</webAppSourceDirectory>&ndash;&gt;-->
-					<!--&lt;!&ndash;<webAppConfig>&ndash;&gt;-->
-					<!--&lt;!&ndash;<resourceBases>&ndash;&gt;-->
-					<!--&lt;!&ndash;&lt;!&ndash;<resourceBase>${project.basedir}/src/main/webapp</resourceBase>&ndash;&gt;&ndash;&gt;-->
-					<!--&lt;!&ndash;<resourceBase>${project.basedir}/target/ROOT</resourceBase>&ndash;&gt;-->
-					<!--&lt;!&ndash;&lt;!&ndash;<resourceBase>${basedir}/target/ROOT</resourceBase>&ndash;&gt;&ndash;&gt;-->
-					<!--&lt;!&ndash;</resourceBases>&ndash;&gt;-->
-					<!--&lt;!&ndash;</webAppConfig>&ndash;&gt;-->
-					<!--<stopKey>stop</stopKey>-->
-					<!--<stopPort>9999</stopPort>-->
-					<!--<systemProperties>-->
-						<!--<systemProperty>-->
-							<!--<name>hotel.execution-mode</name>-->
-							<!--<value>development</value>-->
-							<!--&lt;!&ndash; websockets dont work with default 8080 port in windows &ndash;&gt;-->
-							<!--<name>jetty.port</name>-->
-							<!--<value>8086</value>-->
-						<!--</systemProperty>-->
-					<!--</systemProperties>-->
-				<!--</configuration>-->
-			<!--</plugin>-->
-
-			
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-clean-plugin</artifactId>
